--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "filament/filament": "^4.0"
+        "filament/filament": "^4.0",
+        "netserva/core": "*"
     },
     "require-dev": {
         "pestphp/pest": "^3.0",
