--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "filament/filament": "^4.0",
-        "netserva/core": "@dev"
+        "netserva/core": "^0.0.3"
     },
     "require-dev": {
         "pestphp/pest": "^3.0",
